fixed jump lagging issues

--- a/style.css
+++ b/style.css
@@ -34,15 +34,15 @@ html, body {
 }
 
 .typing {
-    position: fixed;
-    top: 50%;
-    left: 50%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
     border: 10px solid black;
-    transform: translate(-50%,-50%);
     width: 70vw;
-    height: 10vh;
+    height: 12vh;
     padding: 10px 5px purple;
     z-index: 1;
+    margin: 0 auto;
 }
 
 .arrow {
@@ -71,12 +71,11 @@ html, body {
 }
 
 .inputContainer {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 70vw;
-    height: 10vh;
+    height: 12vh;
     margin: 0px;
     padding: 0px;
     z-index: 2;
